--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
+    "typescript": "^5.8.3",
     "vaul": "^0.9.9",
     "viem": "^2.21.1",
     "wagmi": "^2.12.8",
